<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">
        <EditText
            android:id="@+id/etAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_edge_margin"
            android:layout_marginTop="@dimen/container_edge_margin"
            android:hint="@string/label_amount"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/txt_box_min_height"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rgTransactionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/between_element_margin"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/etAmount"
            app:layout_constraintTop_toBottomOf="@+id/etAmount">

            <RadioButton
                android:id="@+id/rbIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_income" />

            <RadioButton
                android:id="@+id/rbExpense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_expense" />
        </RadioGroup>

        <Spinner
            android:id="@+id/spnAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_element_margin"
            android:minHeight="@dimen/txt_box_min_height"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/etAmount" />

        <Button
            android:id="@+id/btnAddTransaction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_element_margin"
            android:text="@string/label_add"
            app:layout_constraintStart_toEndOf="@+id/rgTransactionType"
            app:layout_constraintTop_toTopOf="@+id/rgTransactionType" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/txt_box_min_height"
            android:gravity="center_vertical"
            android:layout_marginStart="@dimen/between_element_margin"
            android:text="@string/label_in_account"
            android:textSize="@dimen/label_txt_size"
            app:layout_constraintStart_toEndOf="@+id/etAmount"
            app:layout_constraintTop_toTopOf="@+id/etAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>