<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Spinner
            android:id="@+id/spnIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/txt_box_min_height"
            android:layout_marginTop="@dimen/between_element_margin"
            app:layout_constraintStart_toStartOf="@+id/etAccountName"
            app:layout_constraintTop_toBottomOf="@+id/etAccountName" />

        <EditText
            android:id="@+id/etAccountName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_edge_margin"
            android:layout_marginTop="@dimen/between_element_margin"
            android:hint="@string/label_account_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="@dimen/txt_box_min_height"
            app:layout_constraintEnd_toStartOf="@+id/etStartingBalance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/etStartingBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minHeight="@dimen/txt_box_min_height"
            android:hint="@string/label_starting_balance"
            android:text="0.00"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etAccountName"
            app:layout_constraintTop_toTopOf="@+id/etAccountName" />

        <Button
            android:id="@+id/btnAddAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/between_element_margin"
            android:layout_marginTop="@dimen/between_element_margin"
            android:text="@string/label_add"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/spnIcon"
            app:layout_constraintTop_toBottomOf="@+id/etStartingBalance" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/container_edge_margin"
            android:layout_marginTop="@dimen/container_edge_margin"
            android:text="Add Account"
            android:textSize="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
